Feat: Refatorado e alterado os preços dos perfumes no hmtl

--- a/src/main/resources/static/html/checkout.index.html
+++ b/src/main/resources/static/html/checkout.index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout Page</title>
-    <link rel="stylesheet" href="globals.css" />
-    <link rel="stylesheet" href="checkout1.style.css" />
+    <link rel="stylesheet" href="../css/globals.css" />
+    <link rel="stylesheet" href="../css/checkout1.style.css" />
   </head>
   <body>
     <div class="checkout-LINK">
