--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Linsley Perfumes</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
   <main class="main">
@@ -30,7 +30,7 @@
     </header>
 
     <!-- Promo Banner -->
-    <section class="promo-banner">
+    <section class="promo-banner"id="inicio">
       <p>Frete grátis para compras acima de R$ 199,00 | Parcele em até 12x | 5% de desconto no PIX</p>
     </section>
 
@@ -38,7 +38,7 @@
     <section class="hero">
       <img src="https://c.animaapp.com/ma8zzj1s10NWvz/img/unsplash-pkfo3lm-d0s.png" alt="Imagem promocional de perfume Lumina" class="hero-image">
       <div class="hero-content">
-        <h1>Perfume Lumina</h1>
+        <h1>Perfect Lumina</h1>
         <a href="#perfumes" class="cta-button">Conheça Agora</a>
       </div>
     </section>
@@ -67,7 +67,7 @@
       <h2>Destaques da Coleção Senses</h2>
       <div class="product-grid">
         <article class="product">
-          <img src="lumina.png" alt="Perfume Lumina 50ml">
+          <img src="../imgs/lumina.png" alt="Perfume Lumina 50ml">
           <h3>Perfume Lumina Parfum 50ml</h3>
           <p>Vem do latim "lumen", que significa luz. Representa a energia que emana das mulheres que brilham com sua força interior.</p>
           <p class="price">R$ 139,90</p>
@@ -75,107 +75,107 @@
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="allegra.png" alt="Perfume Allegra 50ml">
+          <img src="../imgs/allegra.png" alt="Perfume Allegra 50ml">
           <h3>Perfume Allegra Parfum 50ml</h3>
           <p>Leve e delicado, combina peônia, framboesa e baunilha suave. Perfeito para transmitir alegria e feminilidade em cada borrifada.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 99,99</p>
+          <p class="installments">4x de R$ 25,00 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="aurelia.png" alt="Perfume Aurelia 50ml">
+          <img src="../imgs/aurelia.png" alt="Perfume Aurelia 50ml">
           <h3>Perfume Aurelia Parfum 50ml</h3>
           <p>Combinando violeta, incenso e ameixa negra, é um perfume intrigante e envolvente. Criado para destacar o mistério e o magnetismo de quem o usa.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 105,90</p>
+          <p class="installments">4x de R$ 26,48 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="aurora.png" alt="Perfume Aurora 50ml">
+          <img src="../imgs/aurora.png" alt="Perfume Aurora 50ml">
           <h3>Perfume Aurora Parfum 50ml</h3>
           <p>O despertar da luz. Representa o renascimento, o início de um novo ciclo, a energia suave e promissora de quem floresce. Ideal para simbolizar o recomeço e a juventude da alma.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 96,90</p>
+          <p class="installments">4x de R$ 24,23 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="calenthia.png" alt="Perfume Calenthia 50ml">
+          <img src="../imgs/calenthia.png" alt="Perfume Calenthia 50ml">
           <h3>Perfume Calenthia Parfum 50ml</h3>
           <p>Calenthia é a fragrância que nasce do calor suave da alma feminina. Inspirada na luz que não ofusca, mas aquece — ela representa a essência de uma mulher sensível, forte e profundamente conectada com sua energia interior.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 94,90</p>
+          <p class="installments">4x de R$ 23,73 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="eclat.png" alt="Perfume Éclat 50ml">
+          <img src="../imgs/eclat.png" alt="Perfume Éclat 50ml">
           <h3>Perfume Éclat Parfum 50ml</h3>
           <p>Notas de flor de cerejeira, algodão-doce e lírio. Um perfume doce e encantador, criado para celebrar a suavidade e o charme feminino.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 99,90</p>
+          <p class="installments">4x de R$ 24,98 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="eclipse.png" alt="Perfume Eclipse 50ml">
+          <img src="../imgs/eclipse.png" alt="Perfume Eclipse 50ml">
           <h3>Perfume Eclipse Parfum 50ml</h3>
           <p>Eclipse é a fragrância que nasce da harmonia entre luz e sombra. Como o fenômeno celestial que revela o poder da escuridão e da luz se entrelaçando, Eclipse captura o mistério e a intensidade da mulher que conhece seu lado luminoso.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 95,95</p>
+          <p class="installments">4x de R$ 23,99 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="elinor.png" alt="Perfume Élinor 50ml">
+          <img src="../imgs/elinor.png" alt="Perfume Élinor 50ml">
           <h3>Perfume Élinor Parfum 50ml</h3>
           <p>Élinor é a fragrância da luz eterna e da nobreza feminina. Inspirado em um nome que ressoa com elegância e sofisticação, Élinor é para mulheres que possuem uma luz suave, mas que nunca deixa de iluminar os espaços ao seu redor.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 97,90</p>
+          <p class="installments">4x de R$ 24,48 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="fleurs.png" alt="Perfume Fleurs de Mythes 50ml">
+          <img src="../imgs/fleurs.png" alt="Perfume Fleurs de Mythes 50ml">
           <h3>Perfume Fleurs de Mythes Parfum 50ml</h3>
           <p>Feito com orquídea selvagem, mirra e lavanda profunda, transmite um ar de fantasia e singularidade. Ideal para quem gosta de perfumes fora do comum.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 115,50</p>
+          <p class="installments">4x de R$ 28,88 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="isolde.png" alt="Perfume Isolde 50ml">
+          <img src="../imgs/isolde.png" alt="Perfume Isolde 50ml">
           <h3>Perfume Isolde Parfum 50ml</h3>
           <p>Notas de limão siciliano, chá verde e bambu. Refrescante e leve, perfeito para dias ensolarados e para transmitir leveza.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 119,90</p>
+          <p class="installments">4x de R$ 28,98 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="mirabelle.png" alt="Perfume Mirabelle 50ml">
+          <img src="../imgs/mirabelle.png" alt="Perfume Mirabelle 50ml">
           <h3>Perfume Mirabelle Parfum 50ml</h3>
           <p>Combina flor de laranjeira, musk e notas amadeiradas, trazendo um ar refinado e atemporal. Seu objetivo é transmitir classe e presença.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 103,50</p>
+          <p class="installments">4x de R$ 24,98 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="nocturne.png" alt="Perfume Nocturne 50ml">
+          <img src="../imgs/nocturne.png" alt="Perfume Nocturne 50ml">
           <h3>Perfume Nocturne Parfum 50ml</h3>
           <p>Um perfume intenso com toques de oud, especiarias escuras e rosa negra. Potente e sedutor, feito para deixar uma marca inesquecível.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 103,50</p>
+          <p class="installments">4x de R$ 25,88 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="oceana.png" alt="Perfume Oceana 50ml">
+          <img src="../imgs/oceana.png" alt="Perfume Oceana 50ml">
           <h3>Perfume Oceana Parfum 50ml</h3>
           <p>Com toques de menta, bergamota e notas marinhas, evoca brisa do mar e liberdade. Um perfume vibrante para momentos de renovação.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 99,90</p>
+          <p class="installments">4x de R$ 24,98 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
         <article class="product">
-          <img src="oceania.png" alt="Perfume Oceania 50ml">
+          <img src="../imgs/oceania.png" alt="Perfume Oceania 50ml">
           <h3>Perfume Oceania Parfum 50ml</h3>
           <p>Feito com notas refinadas de lima da Pérsia, chá branco e flor de néroli, traz frescor com elegância. Um perfume leve, porém marcante, ideal para quem busca sofisticação na simplicidade.</p>
-          <p class="price">R$ 139,90</p>
-          <p class="installments">4x de R$ 34,98 sem juros</p>
+          <p class="price">R$ 129,90</p>
+          <p class="installments">4x de R$ 32,98 sem juros</p>
           <button class="add-to-cart"><a href="checkout.index.html">Adicionar ao Carrinho</a></button>
         </article>
       </div>
