--- a/src/main/resources/static/html/checkout02.index.html
+++ b/src/main/resources/static/html/checkout02.index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout Page</title>
-    <link rel="stylesheet" href="globals.css" />
-    <link rel="stylesheet" href="checkout02.style.css" />
+    <link rel="stylesheet" href="../css/globals.css" />
+    <link rel="stylesheet" href="../css/checkout02.style.css" />
   </head>
   <body>
     <div class="checkout" data-model-id="17:2066">
